force-app/main/default/objects/cpm__Target_Property__c/cpm__Target_Property__c.object-meta.xml
<CustomObject>
    <label>Target Property</label>
    <nameField>
        <displayFormat>TP-{0}</displayFormat>
        <label>Target Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>