force-app/main/default/objects/cpm__Target_Property__c/fields/cpm__Key__c.field-meta.xml
<CustomField>
    <fullName>cpm__Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>