force-app/main/default/objects/cpm__Target_Property__c/fields/cpm__Target_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Target_Name__c</fullName>
    <label>Target Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>