force-app/main/default/objects/cpm__Target_Property__c/fields/cpm__Value__c.field-meta.xml
<CustomField>
    <fullName>cpm__Value__c</fullName>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>